--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
     </header>
 
     {% if web %}
-    {% include 'nav-web.html' %}
+    {% include 'nav/nav-web.html' %}
     {% else %}
-    {% include 'nav-python.html' %}
+    {% include 'nav/nav-python.html' %}
     {% endif %}
     
     <aside class="pla-sidebar">
