--- a/templates/nav/nav-python.html
+++ b/templates/nav/nav-python.html
@@ -4,10 +4,13 @@
             <a href="/">Home</a>
         </li>
         <li>
-            <a href="/spawn">Spawns</a>
+            <a href="/mmos">MMOs</a>
         </li>
         <li>
-            <a href="/seed">Outbreaks</a>
+            <a href="/seeds">Seeds</a>
+        </li>
+        <li>
+            <a href="/distortions">Distortions</a>
         </li>
         <li>
             <a href="https://github.com/capitalism-sudo/pla-multi-checker/wiki" target="_blank">Wiki</a>
