--- a/templates/nav/nav-web.html
+++ b/templates/nav/nav-web.html
@@ -4,13 +4,10 @@
             <a href="/">Home</a>
         </li>
         <li>
-            <a href="/mmos">MMOs</a>
+            <a href="/spawns">Spawns</a>
         </li>
         <li>
-            <a href="/seed">Seed Checker</a>
-        </li>
-        <li>
-            <a href="/distortion">Distortions</a>
+            <a href="/seeds">Seeds</a>
         </li>
         <li>
             <a href="https://github.com/capitalism-sudo/pla-multi-checker/wiki" target="_blank">Wiki</a>
