--- a/templates/pages/distortions.html
+++ b/templates/pages/distortions.html
@@ -32,17 +32,17 @@
             </select>
         </div>
 
-        <div class="space-between">
+        <div class="pla-control-spaced">
             <label for="distortionShinyFilter">Shiny or Alpha</label>
             <input type="checkbox" id="distortionShinyOrAlphaFilter">
         </div>
 
-        <div class="space-between">
+        <div class="pla-control-spaced">
             <label for="distortionShinyFilter">Shiny Only</label>
             <input type="checkbox" id="distortionShinyFilter">
         </div>
 
-        <div class="space-between">
+        <div class="pla-control-spaced">
             <label for="distortionAlphaFilter">Alpha Only</label>
             <input type="checkbox" id="distortionAlphaFilter">
         </div>
@@ -62,12 +62,6 @@
         <ul class="pla-info-list" data-pla-info-spawns>
 
         </ul>
-    </section>
-
-    <section class="pla-section-back">
-        <div class="pla-control-actions">
-            <a class="pla-button pla-button-action" href="/">Back</a>
-        </div>
     </section>
 {% endblock %}
 
