--- a/templates/mmo-checker.html
+++ b/templates/mmo-checker.html
@@ -135,9 +135,14 @@
 			<ul class="pla-results-ul">
 				<li><span class="pla-results-label"><span data-pla-results-location></span></span></li>
 			</ul>
-			<!--<ul class="pla-results-ul">
+			
+			<!--<button type="button" class="collapsible">See Duplicate Paths</button>
+			<div class="content">-->
+			<ul class="pla-results-ul">
 				<li><span class="pla-results-label">Duplicates:<span data-pla-results-dupes></span></span></li>
-			</ul>-->
+			</ul>
+			
+			
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
                 <li><span class="pla-results-label">Gender:</span> <span data-pla-results-gender></span></li>
