Changed to use flask url_for static resources

--- a/templates/pages/distortions.html
+++ b/templates/pages/distortions.html
@@ -118,5 +118,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="static/js/pla-distortion-checker.js"></script>
+    <script src="{{ url_for('static', filename='js/pla-distortion-checker.js') }}"></script>
 {% endblock %}
