--- a/templates/pages/mmos.html
+++ b/templates/pages/mmos.html
@@ -160,5 +160,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="static/js/pla-mmo-checker.js"></script>
+    <script src="{{ url_for('static', filename='js/pla-mmo-checker.js') }}"></script>
 {% endblock %}
