--- a/templates/pages/spawns.html
+++ b/templates/pages/spawns.html
@@ -212,5 +212,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="static/js/pla-alpha-seed-reader.js"></script>
+<script src="{{ url_for('static', filename='js/pla-alpha-seed-reader.js') }}"></script>
 {% endblock %}
