--- a/templates/pages/seeds.html
+++ b/templates/pages/seeds.html
@@ -237,5 +237,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="static/js/pla-mmo-seed-reader.js"></script>
+    <script src="{{ url_for('static', filename='js/pla-mmo-seed-reader.js') }}"></script>
 {% endblock %}
