--- a/templates/pages/mmos.html
+++ b/templates/pages/mmos.html
@@ -114,7 +114,7 @@
             </ul>
 			<!--<button type="button" class="collapsible">See Duplicate Paths</button>
 			<div class="content">-->
-			<ul class="pla-resultsul">
+			<ul class="pla-results-ul">
 				<span class="pla-results-label">Chained With: <span data-pla-info-chains></span></span>
 			</ul>
             <ul class="pla-results-ul">
