Oh boy, so much. Added shiny sprites to display. Fixed Chains so they display that this path is multiple shinies. Fixed createdistortion for 1.1.1

--- a/templates/pages/mmos.html
+++ b/templates/pages/mmos.html
@@ -101,7 +101,7 @@
             </ul>
 
             <ul class="pla-results-ul">
-                <li><span class="pla-results-label">Shiny:</span> <span data-pla-results-shiny></span></li>
+                <li><span class="pla-results-label">Shiny:</span> <span class="float -left" data-pla-results-shinysprite><span class="float -right" data-pla-results-shiny></span></span></li>
                 <li><span class="pla-results-label">Alpha:</span> <span data-pla-results-alpha></span></li>
             </ul>
 
@@ -115,7 +115,7 @@
 			<!--<button type="button" class="collapsible">See Duplicate Paths</button>
 			<div class="content">-->
 			<ul class="pla-results-ul">
-				<span class="pla-results-label">Chained With: <span data-pla-info-chains></span></span>
+				<li><span class="pla-results-label">Chained With: <span data-pla-info-chains></span></span></li>
 			</ul>
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">Duplicates:<span data-pla-results-dupes></span></span></li>
