first round chaining, and filter

--- a/templates/pages/seeds.html
+++ b/templates/pages/seeds.html
@@ -165,6 +165,11 @@
             <label for="mmoDefaultRouteFilter">Show Default Paths Only</label>
             <input type="checkbox" id="mmoDefaultRouteFilter">
         </div>
+		
+		<div class="pla-control-spaced">
+            <label for="mmoDefaultRouteFilter">Show Multiple Shiny Paths Only</label>
+            <input type="checkbox" id="mmoMultiFilter">
+        </div>
 
         <!--
         <div class="pla-control-spaced">
