Added Multi Spawner Checking for CFW and Non CFW

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -437,6 +437,36 @@ input[type="text"]:focus-visible {
   );
 }
 
+.tab {
+	overflow: hidden;
+	border: 2px solid var(--brand);
+	background-color: transparent;
+}
+
+.tab button {
+	background-color: inherit;
+	float: left;
+	border: 1px solid var(--brand);
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
+}
+
+.tab button:hover {
+	background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.tab button.active {
+	background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.tabcontent {
+	display: none;
+	padding: 6px 12px;
+	border-top: none;
+}
+
 /* Action Button */
 .pla-button-action {
   border: 2px solid var(--brand);
